--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 .about{
     display: flex;
     justify-content: center;
@@ -27,7 +26,7 @@
     margin: 2rem 0 3rem;
 }
 
-@media screen and (max-width:768px) {
+@media(max-width:768px) {
     .about{
         flex-direction: column-reverse;
     }
@@ -38,7 +37,7 @@
     }
 }
 
-@media screen and (max-width:365px) {
+@media(max-width:365px) {
     .about-img img{
         width: 90vw;
     }
