--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -62,7 +62,7 @@
   
 
   
-  @media screen and (max-width: 768px) {
+  @media(max-width: 768px) {
     .contact-options {
       flex-direction: column;
       align-items: center;
