--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -89,7 +89,7 @@ span{
     box-shadow: 0 0 1rem var(--main-color);
 }
 
-@media screen and (max-width:768px) {
+@media(max-width:768px) {
     .home{
         flex-direction: column;
     }
@@ -108,7 +108,7 @@ span{
     }
 }
 
-@media screen and (max-width:365px) {
+@media(max-width:365px) {
     .home-img img{
         width: 90vw;
     }
