--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     margin: 0;
@@ -62,24 +62,37 @@ body{
     box-shadow: 0 0 1rem var(--main-color);
 }
 
+@media(max-width:1300px){
+    .btn{
+        width: 15rem;
+        margin: 1rem 1rem 1rem 0;
+    }
+}
 
-/* ===========MEDIA QUERIES (MEDIUM DEVICES)============= */
-
-@media screen and (max-width:1200px) {
+@media(max-width:1200px) {
     html{
         font-size: 55%;
     }
 }
 
-/* ===========MEDIA QUERIES (SMALL DEVICES)============= */
-
-@media screen and (max-width:991px) {
+@media(max-width:991px) {
     section{
         padding: 10rem 3% 2rem;
     }
 }
 
-@media screen and (max-width:450px) {
+@media(max-width:600px){
+    .btn{
+        width: 10rem;
+        height: 3rem;;
+        font-size: 1.5rem;
+    }
+    .heading{
+        font-size: 4rem;
+    }
+}
+
+@media(max-width:450px) {
     html{
         font-size: 48%;
     }
