--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,76 +1,77 @@
 .contact-container {
-    margin-top: 5rem;
-    display: flex;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-options {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.contact-option {
+  text-align: center;
+  flex-basis: 45%;
+  padding: 20px;
+  border: 2px solid var(--bg-text-color);
+  border-radius: 2rem;
+}
+
+.contact-option:hover {
+  background: #edeef0;
+}
+
+.icon-name {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+}
+
+.contact-option-icon {
+  font-size: 3.5rem;
+  color: var(--main-color);
+}
+
+.contact-option h4 {
+  margin-top: 0.7rem;
+  display: inline-block;
+  font-size: 1.5rem;
+}
+
+.contact-option h5 {
+  margin-top: 0.7rem;
+  font-size: 1.2rem;
+}
+
+form {
+  width: 100%;
+}
+
+input,
+textarea {
+  width: calc(100% - 20px);
+  margin-bottom: 15px;
+  flex: 1;
+  background: #edeef0;
+  border: 1px solid brown;
+  outline: none;
+  padding: 1.5rem;
+  border-radius: 2rem;
+  font-size: 1.6rem;
+  color: var(--bg-text-color);
+}
+
+@media (max-width: 768px) {
+  .contact-options {
     flex-direction: column;
     align-items: center;
   }
-  
-  .contact-options {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
+
   .contact-option {
-    text-align: center;
-    flex-basis: 45%;
-    padding: 20px;
-    border: 2px solid var(--bg-text-color);
-    border-radius: 2rem;
- 
+    margin-bottom: 20px;
+    flex-basis: 90%;
   }
-  
-  .contact-option:hover {
-    background: #edeef0;
-  }
-  
-  .contact-option-icon {
-    font-size: 3.5rem;
-    margin-bottom: 0.5rem;
-    color: var(--main-color);
-  }
-
-  .contact-option h4 {
-    margin-top: 0.7rem;
-    display: inline-block;
-    font-size: 1.5rem;
-  }
-
-  .contact-option h5 {
-    margin-top: 0.7rem;
-    font-size: 1.2rem;
-  }
-
-  form {
-    width: 100%;
-  }
-  
-  input,
-  textarea {
-    width: calc(100% - 20px);
-    margin-bottom: 15px;
-    flex: 1;
-    background: #edeef0;
-    border: 1px solid brown;
-    outline: none;
-    padding: 1.5rem;
-    border-radius: 2rem;
-    font-size: 1.6rem;
-    color: var(--bg-text-color)
-  }
-  
-
-  
-  @media(max-width: 768px) {
-    .contact-options {
-      flex-direction: column;
-      align-items: center;
-    }
-    
-    .contact-option {
-      margin-bottom: 20px;
-      flex-basis: 90%;
-    }
-  }
-  
+}
